# example-app

./: .pre-commit-config.yaml  README.md
.github/workflows/: build-and-deploy.yaml
backend/: pyproject.toml
backend/app/: main.py  settings.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: index.css  utils.js
frontend/src/components/: AgentBasicInformationData.jsx  DataProductLink.jsx  Navbar.jsx
frontend/src/containers/: AgentBasicInformation.jsx  App.jsx
