[tool.poetry]
name = "example-app"
version = "0.1.0"
description = "Example dataspace application backend"
authors = ["IOXIO"]
packages = [{include = "app", from = "."}]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {version = "^0.30.1", extras = ["standard"]}
httpx = "^0.27.0"
async-lru = "^2.0.4"

[tool.poetry.scripts]
dev = "app.main:main"
serve = "app.prod:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
